--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,8 @@ apply from: 'git.gradle'
 task wrapper(type:Wrapper) {
 	gradleVersion = '1.0-rc-3'
 }
+
+git {
+	remote = 'origin'
+	branch = 'master'
+}
