--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
 	compile 'org.apache.httpcomponents:httpclient:4.2.1'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.0.5'
+	compile 'org.slf4j:slf4j-api:1.6.6'
 }
